--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input type="file" id="fileInput" accept="image/*" multiple>
     <button type="button" onclick="uploadFiles()">Upload</button>
   </form>
+  <div id="selectedFiles"></div>
   <div id="gallery"></div>
   <script src="scripts.js"></script>
 </body>
