--- a/model/index.html
+++ b/model/index.html
@@ -4,67 +4,66 @@
     <title>3D Model Viewer</title>
     <style>
         body { margin: 0; overflow: hidden; }
-        canvas { width: 100%; height: 100%; }
+        canvas { display: block; width: 100%; height: 100%; }
     </style>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script type="importmap">
-    {
-        "imports": {
-        "three": "https://cdn.jsdelivr.net/npm/three@0.134.0/build/three.module.js",
-        "three/examples/jsm/": "https://cdn.jsdelivr.net/npm/three@0.134.0/examples/jsm/"
+        {
+            "imports": {
+                "three": "https://cdn.jsdelivr.net/npm/three@0.134.0/build/three.module.js",
+                "three/examples/jsm/": "https://cdn.jsdelivr.net/npm/three@0.134.0/examples/jsm/"
+            }
         }
-    }
     </script>
     <script type="module">
-        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.134.0/examples/jsm/loaders/GLTFLoader.js';
-        import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.134.0/examples/jsm/controls/OrbitControls.js';
+        import * as THREE from 'three';
+        import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
+        import { OrbitControls } from 'three/examples/jsm/controls/OrbitControls.js';
 
         // Set up the scene, camera, and renderer
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
-        //document.body.appendChild(renderer.domElementIfNeeded());
         document.body.appendChild(renderer.domElement);
-        //renderer.setClearColor(0x000000, 0);
         renderer.setClearColor(0x333333); // Dark gray background
 
-
         // Add lighting
-        //const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
         const ambientLight = new THREE.AmbientLight(0xffffff, 1); // Brighter ambient light
         scene.add(ambientLight);
-
-        //const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
         const directionalLight = new THREE.DirectionalLight(0xffffff, 2); // Stronger directional light
         directionalLight.position.set(5, 5, 5).normalize();
         scene.add(directionalLight);
 
         // Load the 3D model
         const loader = new GLTFLoader();
-            //loader.load('https://reddtt.github.io/mywebsite/scene.glb', (gltf) => {
-            loader.load('https://reddtt.github.io/mywebsite/Guqin1_.glb', (gltf) => {
-            //loader.load('Guqin1_.glb', (gltf) => {
-            const model = gltf.scene;
-            model.scale.set(0.01, 0.01, 0.01);
-            model.position.set(0, 0, 0);
-            scene.add(model);
-            console.log('Model loaded successfully:', model);
-        }, undefined, (error) => {
-            console.error('An error occurred while loading the model:', error);
-        });
+        loader.load(
+            'https://reddtt.github.io/mywebsite/models/Guqin1_.glb', // Use GitHub Pages URL
+            (gltf) => {
+                const model = gltf.scene;
+                model.scale.set(0.01, 0.01, 0.01);
+                model.position.set(0, 0, 0);
+                scene.add(model);
+                console.log('Model loaded successfully:', model);
+            },
+            (xhr) => {
+                console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+            },
+            (error) => {
+                console.error('An error occurred while loading the model:', error);
+            }
+        );
 
         // Position the camera
-        camera.position.set(10, 0, 0); // Move it back and up at an angle
-        camera.lookAt(0, 0, 0); // Point the camera at the center of the object
+        camera.position.set(10, 0, 0);
+        camera.lookAt(0, 0, 0);
 
-        // Add orbit controls for interactivity
+        // Add orbit controls
         const controls = new OrbitControls(camera, renderer.domElement);
-        controls.zoomSpeed = 2; // Increase zoom speed (default is 1)
-        controls.minDistance = 1; // Prevent zooming too close
-        controls.maxDistance = 10; // Prevent zooming too far
+        controls.zoomSpeed = 2;
+        controls.minDistance = 1;
+        controls.maxDistance = 10;
         controls.enableDamping = true;
         controls.dampingFactor = 0.05;
 
